--- a/src/App.module.css
+++ b/src/App.module.css
@@ -6,5 +6,5 @@
     display: grid;
     grid-template-columns: 256px 1fr;
     gap: 2rem;
-    align-items: flex-star;
+    align-items: flex-start;
 }
