--- a/src/components/Sidebar.module.css
+++ b/src/components/Sidebar.module.css
@@ -24,7 +24,7 @@
     height: calc(3rem + 12px);
     border-radius: 8px;
     border: 4px solid var(--gray-800);
-    outline: 2px solid var(--green);
+    outline: 2px solid var(--green-500);
 }
 
 .profile strong {
@@ -47,8 +47,8 @@
 
 .sidebar footer a {
     background: transparent;
-    color: var(--green);
-    border: 1px solid var(--green);
+    color: var(--green-500);
+    border: 1px solid var(--green-500);
     border-radius: 8px;
     height: 50px;
     padding: 0 1.5rem;
@@ -65,6 +65,6 @@
 }
 
 .sidebar footer a:hover {
-    background: var(--green);
+    background: var(--green-500);
     color: var(--white);
 }
